--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-
 monitor_speed = 115200
+lib_deps = 
+    mikalhart/TinyGPSPlus@^1.0.3
+    plerup/EspSoftwareSerial@^8.1.0
