--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,6 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-    mikalhart/TinyGPSPlus@^1.0.3
-    plerup/EspSoftwareSerial@^8.1.0
+	mikalhart/TinyGPSPlus@^1.0.3
+	plerup/EspSoftwareSerial@^8.1.0
+	adafruit/Adafruit MPU6050@^2.2.6
