--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,5 @@ lib_deps =
 	mikalhart/TinyGPSPlus@^1.0.3
 	plerup/EspSoftwareSerial@^8.1.0
 	adafruit/Adafruit MPU6050@^2.2.6
+
+board_build.partitions=huge_app.csv
