--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,6 @@ monitor_speed = 115200
 lib_deps = 
 	mikalhart/TinyGPSPlus@^1.0.3
 	plerup/EspSoftwareSerial@^8.1.0
-	adafruit/Adafruit MPU6050@^2.2.6
+	; adafruit/Adafruit MPU6050@^2.2.6
+	lewisxhe/SensorLib@^0.2.0
 board_build.partitions = huge_app.csv
